@@ -201,6 +201,7 @@ Version 1.5
  - Add Dome Door/Window Sensor Pro (Nechry)
  - Add Dome Motion Detector (Nechry)
  - Add Dome Leak Sensor (Nechry)
+ - Add Dome Mouser (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
